Fix the gutter overflow issue

--- a/app/assets/stylesheets/redesign/components/three_card_list.sass
+++ b/app/assets/stylesheets/redesign/components/three_card_list.sass
@@ -5,13 +5,13 @@ $gutter: 11.5px
 .ThreeCardList-wrapper
   display: flex;
   justify-content: center;
-  margin-left: -$gutter
-  margin-right: -$gutter
 
 .ThreeCardList
   display: flex
-  margin: 0
   flex-wrap: wrap
+  margin-left: -$gutter
+  margin-right: -$gutter
+  margin-top: 0
   max-width: $max-breakpoint
 
 .ThreeCardListItem
